# certificate

./: CMakeLists.txt  README.md  certificate.cpp  certificate.sln  certificate.vcxproj  getopt.h
